postgresql/postgres-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
spec:
  # type: NodePort
  type: LoadBalancer
  selector:
    app: postgre-pods-label
  ports:
    - protocol: TCP
      # port: 5432
      port: 80
      # targetPort: 5432
      targetPort: 80
      # nodePort: 30007
