postgresql/postgres-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgre-ing-d
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: postgre.ajmal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgre-service
                port:
                  number: 80
